fix: spacing between plans

--- a/src/components/plan/plan.module.css
+++ b/src/components/plan/plan.module.css
@@ -65,6 +65,8 @@
 }
 
 .link_plan:hover {
-  transform: scale(1.05);
   cursor: pointer;
+}
+.link_plan:hover .MicroServices {
+  border: 1px solid #00aa9d;
 }
